--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,21 @@ a {
     background: #bb5f2e;
 }
 
+.text-input {
+    padding: .7rem 1rem;
+    display: block;
+    width: 100%;
+    border: 1px solid #e0e0e0;
+    border-radius: 5px;
+    outline: none;
+    color: #444;
+    line-height: 1.5rem;
+    font-size: 1em;
+    font-family: 'Lora', serif;
+}
+
+/* Navbar */
+
 header {
     background: #fff87d;
     height: 66px;
@@ -226,6 +241,40 @@ header .menu-toggle {
     width: 30%;
     float: left;
     height: 300px;
+}
+
+.content .sidebar .section {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.content .sidebar .section .section-title {
+    margin: 10px 0px 10px 0px;
+}
+
+.content .sidebar .section.search {
+    margin-top: 80px;
+}
+
+.content .sidebar .section.topics ul {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+}
+
+.content .sidebar .section.topics ul li:not(:last-child) {
+    border-bottom: 1px solid #e0e0e0;
+    padding: 15px 0px 15px 0px;
+}
+
+.content .sidebar .section.topics ul li:last-child {
+    padding: 15px 0px 0px 0px;
+}
+
+.content .sidebar .section.topics ul li a {
+    display: block;
 }
 
 /* Media Queries */
