--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
+    height: 100%;
     padding: 0px;
     margin: 0px;
     background-color: rgb(250, 250, 250);
@@ -49,6 +50,10 @@ a {
     line-height: 1.5rem;
     font-size: 1em;
     font-family: 'Lora', serif;
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/55/Magnifying_glass_icon.svg");
+    background-size: 15px;
+    background-repeat: no-repeat;
+    background-position: calc(100% - 20px) center;
 }
 
 /* Navbar */
@@ -68,13 +73,21 @@ header .logo {
     margin-left: 2em;
 }
 
-header .logo-text {
-    margin: 5px;
-    font-family: 'Candal', serif;
+.logo-img {
+    width: 50px;
+    margin: 9px;
+    position: absolute;
 }
 
-header .logo-text span{
-    color:#f70c17
+.logo-text {
+    color: #e47439;
+    margin: 10px 0px 0px 65px;
+    font-family: 'Candal', serif;
+    position: relative;
+}
+
+.logo-text span{
+    color:#f70c17;
 }
 
 header ul {
@@ -129,6 +142,11 @@ header ul li a:hover {
 
 header .menu-toggle {
     display: none;
+}
+
+.page-wrapper {
+    min-height: 100%;
+
 }
 
 .page-wrapper a:hover {
@@ -275,6 +293,38 @@ header .menu-toggle {
 
 .content .sidebar .section.topics ul li a {
     display: block;
+}
+
+/* Footer */
+.footer {
+    background: #323239;
+    color: #d3d3d3;
+    height: 380px;
+    position: relative;
+}
+
+.footer .footer-content {
+    height: 350px;
+    display: flex;
+}
+
+.footer .footer-content .footer-section {
+    flex: 1;
+    padding: 25px;
+    border: 1px solid red
+}
+
+.footer .footer-bottom {
+    background: #2a2a30;
+    color: #9393a3;
+    font-size: small;
+    text-align: center;
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    padding-top: 7px;
 }
 
 /* Media Queries */
