--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,6 @@ a {
     line-height: 1.5rem;
     font-size: 1em;
     font-family: 'Lora', serif;
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/55/Magnifying_glass_icon.svg");
-    background-size: 15px;
-    background-repeat: no-repeat;
-    background-position: calc(100% - 20px) center;
 }
 
 /* Navbar */
@@ -276,6 +272,13 @@ header .menu-toggle {
     margin-top: 80px;
 }
 
+.content .sidebar .section.search .text-input {
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/55/Magnifying_glass_icon.svg");
+    background-size: 15px;
+    background-repeat: no-repeat;
+    background-position: calc(100% - 20px) center;
+}
+
 .content .sidebar .section.topics ul {
     margin: 0px;
     padding: 0px;
@@ -299,19 +302,66 @@ header .menu-toggle {
 .footer {
     background: #323239;
     color: #d3d3d3;
-    height: 380px;
+    height: 350px;
     position: relative;
 }
 
 .footer .footer-content {
-    height: 350px;
+    height: 320px;
     display: flex;
 }
 
 .footer .footer-content .footer-section {
     flex: 1;
     padding: 25px;
-    border: 1px solid red
+}
+
+.footer .footer-content h2 {
+    color: #e47439;
+}
+
+.footer .footer-content .about .contact span {
+    display: block;
+    font-size: 1.1em;
+    margin-bottom: 8px;
+}
+
+.footer .footer-content .about .socials a {
+    width: 45px;
+    height: 41px;
+    padding-top: 7px;
+    margin-right: 5px;
+    text-align: center;
+    display: inline-block;
+    font-size: 1.3em;
+    border: 1px solid #d3d3d3;
+    border-radius: 5px;
+}
+
+.footer .footer-content .about .socials a:hover {
+    border: 1px solid white;
+    color: white;
+}
+
+.footer .footer-content .links ul a {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 1.2em;
+}
+
+.footer .footer-content .links ul a:hover {
+    color: white;
+}
+
+.footer .footer-content .contact-form .contact-input {
+    margin-bottom: 10px;
+    line-height: 1.5rem;
+    padding: .7rem 1.2rem;
+    border: none;
+}
+
+.footer .footer-content .contact-form .contact-btn {
+    float: right;
 }
 
 .footer .footer-bottom {
